--- a/clusters/staging/infrastructure.yaml
+++ b/clusters/staging/infrastructure.yaml
@@ -10,3 +10,8 @@ spec:
     name: flux-system
   path: ./infrastructure
   prune: true
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-gpg
+
